--- a/views/partials/adminSidebar.ejs
+++ b/views/partials/adminSidebar.ejs
@@ -41,7 +41,7 @@
         </li>
         <li>
           <i class="material-symbols-outlined"> list_alt </i
-          ><a href="">Orders</a>
+          ><a href="/admin/order">Orders</a>
         </li>
         <li>
           <i class="material-symbols-outlined"> ad_units </i
