--- a/views/partials/templateHeader.ejs
+++ b/views/partials/templateHeader.ejs
@@ -39,17 +39,14 @@ rel="stylesheet"
 rel="stylesheet"
 /> 
 <!-- MDB -->
-<!-- <link
+<link
 href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.1/mdb.min.css"
 rel="stylesheet"
-/> -->
+/>
 
-
-	
-	
 
   </head>
-  <body class="goto-here  animsition">
+  <body class="goto-here  ">
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
 	      <a class="navbar-brand" href="/">SHOE HUB</a>
