--- a/views/user/editProfile.ejs
+++ b/views/user/editProfile.ejs
@@ -152,7 +152,7 @@
                                 <p class="mt-4">State</p>
                             </div>
                             <div class="col-sm-9 text-secondary ml-10 mb-0 mt-3">
-                                <input type="text" placeholder="state" name="state" id="state" class="form-control" value="<%=userData?.addressDetails[0].state%>">
+                                <input type="text" placeholder="state" name="state" id="state" class="form-control" value="<%=userData?.addressDetails[0]?.state%>">
                             </div>
                             <div class="col-sm-3">
                                 <p class="mt-4">District</p>
