--- a/views/admin/banner.ejs
+++ b/views/admin/banner.ejs
@@ -32,7 +32,13 @@
                         <input name="couponName" required class="rounded-2" style="width: 189px; height: 38px;"
                             type="text">
                     </div>
-                    
+
+                    <div class="d-flex flex-column">
+                      <label>Image</label>
+                      <input name="bannerImage" required class="rounded-2" style="width:190px; height: 38px;"
+                          type="file" >
+                  </div>
+                
 
 
                     <button class="btn btn-success mt-4" style="width: 75px; height: 38px;"
