--- a/views/partials/templateFooter.ejs
+++ b/views/partials/templateFooter.ejs
@@ -147,7 +147,7 @@ style="width: auto; height: 150px; background-color: #f8f9fa "
 <script src="/https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
 <script src="/js/google-map.js"></script>
 <script src="/js/main.js"></script>
-<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="/cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
     
