--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -27,7 +27,7 @@
 	
 	<div class="limiter" >
 		<div class="container-login100 " >
-			<div class="wrap-login100" style="background-color:#f4c948;">
+			<div class="wrap-login100" style="background-color:#dbcc8f;">
 				<div class="login100-pic js-tilt" data-tilt>
 					<img src="../images/logo.png" alt="IMG">
 				</div>
