--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -2,12 +2,12 @@
 
 <body>
 
-    <section class="vh-100" style="background-color: #eee;">
+    <section class="vh-100" style="background-color: white;">
         <div class="container h-100" >
           <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-lg-12 col-xl-11">
               <div class="card text-black" style="border-radius: 25px;">
-                <div class="card-body p-md-5" style="background-color:#f4c948; border-radius: 15px;" >
+                <div class="card-body p-md-5" style="background-color:#dbcc8f; border-radius: 15px;" >
                   <div class="row justify-content-center">
                     <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
       
