--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -226,7 +226,7 @@
 						  <p class="price"><span><%=products.price%> </span></p>
 						</div>
 						<p class="bottom-area d-flex px-3">
-						  <a href="#" class="buy-now text-center py-2"
+						  <a href="/wishList/<%=products._id%>" class="buy-now text-center py-2"
 							>ADD TO <span><i class="icon-heart"></i></span
 						  ></a>
 						</p>
