--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -75,7 +75,7 @@
               ></a>
             </li>
             <li class="nav-item cta cta-colored">
-              <a href="" class="nav-link"
+              <a href="viewWishlist" class="nav-link"
                 ><span class="icon-heart"></span
               ></a>
             </li>
@@ -240,7 +240,7 @@
                 </div>
                 <p class="bottom-area d-flex px-3">
                   
-                  <a href="#" class="buy-now text-center py-2"
+                  <a href="/wishList/<%=products._id%>" class="buy-now text-center py-2"
                     >ADD TO <span><i class="icon-heart"></i></span
                   ></a>
                 </p>
