--- a/views/admin/orders.ejs
+++ b/views/admin/orders.ejs
@@ -47,7 +47,7 @@
                             <td>₹ <%= order.totalAmount %>
                             </td>
                             <td>
-                               
+                                <a href="/admin/orderedProduct/<%=order._id%> " class="btn btn-secondary ">View</a> 
                                 <button type="button" class="btn btn-success" data-bs-toggle="modal"
                                     data-bs-target="#exampleModal-<%= order._id %>">
                                     Edit
