--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -422,25 +422,25 @@
 				  <div class="modal-body">
 					<div class="mb-1">
 					  <label for="recipient-name" class="col-form-label">Housename:</label>
-					  <input required type="text" value="<%= address?.addressDetails[0].housename %>" class="form-control" id="housename" name="housename" />
+					  <input required type="text" value="<%= address?.addressDetails[0]?.housename %>" class="form-control" id="housename" name="housename" />
 					</div>
 					<div class="mb-3">
 					  <label for="recipient-name" class="col-form-label">Area:</label>
-					  <input required type="text" value="<%= address?.addressDetails[0].area %>" class="form-control" id="area" name="area" />
+					  <input required type="text" value="<%= address?.addressDetails[0]?.area %>" class="form-control" id="area" name="area" />
 					</div>
 					<div class="mb-3">
 					  <label for="recipient-name" class="col-form-label">Landmark:</label>
-					  <input required type="text" value="<%= address?.addressDetails[0].landMark %>" class="form-control" id="landmark" name="landmark" />
+					  <input required type="text" value="<%= address?.addressDetails[0]?.landMark %>" class="form-control" id="landmark" name="landmark" />
 					</div>
 					<div class="mb-3">
 					  <div class="row">
 						<div class="col-md-6 mb-3">
 						  <label for="firstName">District</label>
-						  <input required type="text" <%= address?.addressDetails[0].district %> class="form-control" id="district" name="district" />
+						  <input required type="text" <%= address?.addressDetails[0]?.district %> class="form-control" id="district" name="district" />
 						</div>
 						<div class="col-md-6 mb-3">
 						  <label for="lastName">State</label>
-						  <input required type="text" value="<%= address?.addressDetails[0].state %>" class="form-control" id="state" name="state" />
+						  <input required type="text" value="<%= address?.addressDetails[0]?.state %>" class="form-control" id="state" name="state" />
 						</div>
 					  </div>
 					</div>
@@ -448,11 +448,11 @@
 					  <div class="row">
 						<div class="col-md-6 mb-3">
 						  <label for="firstName">Post office</label>
-						  <input required type="text" value="<%= address?.addressDetails[0].postoffice %>" class="form-control" id="postoffice" name="postoffice" />
+						  <input required type="text" value="<%= address?.addressDetails[0]?.postoffice %>" class="form-control" id="postoffice" name="postoffice" />
 						</div>
 						<div class="col-md-6 mb-3">
 						  <label for="lastName">Pincode</label>
-						  <input required type="text" value="<%= address?.addressDetails[0].pin %>" class="form-control" id="pin" name="pin" />
+						  <input required type="text" value="<%= address?.addressDetails[0]?.pin %>" class="form-control" id="pin" name="pin" />
 						</div>
 					  </div>
 					</div>
